--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.3.3",
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "pg": "^7.11.0",
+    "pg": "^7.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2",
-    "router": "^1.3.3"
+    "redux-saga": "^1.0.5",
+    "router": "^1.3.3",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.19.1"
   },
   "scripts": {
     "start": "node server/server.js",
