--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^5.1.1",
     "react-router-dom": "^5.0.1",
+    "react-router-transition": "^1.3.0",
     "react-scripts": "^3.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
