--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
